# fstools-rs

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/: release-drafter-template.yml
.github/workflows/: automerge.yml  release.yml  release_draft.yml  test.yml
benches/: vfs.rs
cli/: Cargo.toml
crates/asset-server/: Cargo.toml
crates/asset-server/src/: archive.rs  asset_source.rs  dvdbnd.rs  lib.rs  types.rs  vfs.rs
crates/asset-server/src/archive/: bnd4.rs
crates/asset-server/src/asset_source/: dvdbnd.rs  fast_path.rs  vfs.rs
crates/asset-server/src/asset_source/vfs/: watcher.rs
crates/asset-server/src/types/: bnd4.rs  flver.rs  msb.rs  part.rs
crates/asset-server/src/types/msb/: scene.rs
crates/asset-server/src/vfs/: bnd4_mount.rs  watcher.rs
crates/cli/: Cargo.toml
crates/cli/src/: describe.rs  extract.rs  lib.rs  main.rs  repl.rs
crates/cli/src/describe/: bnd.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  paths.rs
crates/dvdbnd/: Cargo.toml
crates/dvdbnd/src/: bnd.rs  key_provider.rs  lib.rs  name.rs  reader.rs
crates/formats/: Cargo.toml  build.rs
crates/formats/src/: bhd.rs  bnd4.rs  entryfilelist.rs  flver.rs  lib.rs  msb.rs  param.rs
crates/formats/src/dcx/: deflate.rs  mod.rs  oodle.rs  zstd.rs
crates/formats/src/flver/: dummy.rs  mesh.rs  mod.rs  reader.rs  vertex_buffer.rs
crates/formats/src/flver/vertex_buffer/: accessor.rs  mod.rs
crates/formats/src/io_ext/: mod.rs  read.rs  seek.rs  widestring.rs  zerocopy.rs
crates/formats/src/matbin/: mod.rs
crates/formats/src/msb/: event.rs  model.rs  parts.rs  point.rs  route.rs
crates/oodle-rt/: Cargo.toml  build.rs  oodle2.h  oodle2base.h  oodle_rt.hpp
crates/oodle-rt/src/: decoder.rs  ffi.gen.rs  lib.rs
crates/support/elden_ring/: Cargo.toml
crates/support/elden_ring/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: bnd.rs  key_provider.rs  lib.rs  reader.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: main.rs  preload.rs
crates/viewer/src/flver/: asset.rs  mod.rs
crates/viewer/src/formats/: mod.rs  msb.rs  tpf.rs
crates/viewer/src/vfs/: mod.rs  reader.rs
format/: Cargo.toml  build.rs
format/src/: bhd.rs  bhd2.rs  bnd4.rs  dcx.rs  flver.rs  lib.rs  matbin.rs  tpf.rs
format/src/dcx/: deflate.rs  kraken.rs  mod.rs  oodle.rs
format/src/flver/: accessor.rs  bone.rs  dummy.rs  face_set.rs  header.rs  material.rs  mesh.rs  mod.rs  reader.rs  texture.rs  vertex_buffer.rs
format/src/flver/vertex_buffer/: accessor.rs  mod.rs  normalization.rs
format/src/io_ext/: mod.rs  read.rs  zerocopy.rs
samples/: AEG024_015.flver
src/: lib.rs
tests/: dcx.rs
tests/snapshots/: dcx__decode_kraken_dcx.snap  dcx__main.snap
util/: Cargo.toml
util/src/: asset_archive.rs  asset_repository.rs  flver_buffer_builder.rs  lib.rs
vfs/: Cargo.toml
vfs/src/: bnd.rs  key_provider.rs  lib.rs  name.rs  reader.rs
vfs/tests/: elden_ring.rs  keys.rs
viewer/: Cargo.toml
viewer/assets/shaders/: flver.wgsl
viewer/src/: keys.rs  main.rs
viewer/src/flver/: asset.rs
viewer/src/formats/: flver.rs  mod.rs  tpf.rs
viewer/src/vfs/: mod.rs  reader.rs
