[package]
name = "fstools"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
fstools_formats.workspace = true
fstools_dvdbnd.workspace = true

[dev-dependencies]
criterion = "0.3"
insta = "1"
libtest-mimic = "0.7"

[[bench]]
name = "vfs"
harness = false

[[test]]
name = "dcx"
harness = false

[workspace]
resolver = "2"
default-members = ["crates/cli", "crates/viewer"]
members = [
    "crates/formats",
    "crates/cli",
    "crates/viewer",
    "crates/dvdbnd", "crates/asset-server",
]

[workspace.package]
version = "0.1.0"
license = "MIT AND Apache-2.0"
edition = "2021"

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"

[workspace.dependencies]
fstools_formats = { path = "crates/formats", version = "0.1.0" }
fstools_dvdbnd = { path = "crates/dvdbnd", version = "0.1.0" }
memmap2 = "0.7"
rayon = "1"
thiserror = "1"
