[package]
name = "cli"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
format = { path = "../format" }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1"
souls_vfs = { path = "../vfs" }
util = { path = "../util" }
