[package]
name = "format"
version.workspace = true
license.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
bytemuck = "1"
byteorder = "1"
aes = "0.8"
oodle-safe = "0.1.0"
rayon = "1"
rug = "1.24"
rsa = "0.9"
zerocopy = { version = "0.7.32", features = ["derive"] }

[dependencies.thiserror]
workspace = true
