[package]
name = "souls_vfs"
version.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.memmap2]
version = "0.7"

[dependencies.encoding_rs]
version = "0.8"

[dependencies.aes]
version = "0.8"

[dependencies.thiserror]
workspace = true

[dependencies.format]
path = "../format"