[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
byteorder = "1"
bevy = { version = "0.13", features = ["dds"] }
format = { path = "../format" }
souls_vfs = { path = "../vfs" }
util = { path = "../util" }
bevy_panorbit_camera = "0.14"
steamlocate = "1.2.1"
bevy-inspector-egui = "0.23"

[dependencies.thiserror]
workspace = true