[package]
name = "fstools_asset_server"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bevy = "0.13"
byteorder = "1.5.0"
crossbeam-channel = "0.5"
fstools_dvdbnd.workspace = true
fstools_formats.workspace = true
futures-lite = "2"
futures-locks = "0.7"
generational-arena = "0.2.9"
typed-path = "0.8"

[lints]
workspace = true
