[package]
name = "fstools_asset_server"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
bevy = "0.13"
blocking = "1"
byteorder = "1.5.0"
crossbeam-channel = "0.5"
fstools_dvdbnd.workspace = true
fstools_formats.workspace = true
futures-lite = "2"
memmap2.workspace = true
serde = "1"
thiserror.workspace = true
typed-path = "0.8"

[lints]
workspace = true
