[package]
name = "fstools_cli"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }
fstools_formats.workspace = true
fstools_vfs.workspace = true
memmap2.workspace = true
rayon.workspace = true

