[package]
name = "fstools_cli"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
console = "0.15"
directories = "5"
indicatif = { version = "0.17", features = ["rayon"] }
fstools_formats.workspace = true
fstools_dvdbnd.workspace = true
fstools_elden_ring_support.workspace = true
memmap2.workspace = true
rayon.workspace = true
rustyline = "14.0.0"
shlex = "1.3.0"

[lints]
workspace = true
