[package]
name = "fstools_config"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5"
serde = {  version = "1"}
serde_derive = "1"
toml = "0.8"

[lints]
workspace = true
