[package]
name = "fstools_formats"
version.workspace = true
license.workspace = true
edition.workspace = true
build = "build.rs"

[features]
default = []
strict-padding = []

[dependencies]
aes = "0.8"
bytemuck = "1"
byteorder = "1"
flate2 = "1.0"
oodle-sys = "0.1"
rayon.workspace = true
rsa = "0.9"
rug = "1.24"
thiserror.workspace = true
widestring = "1"
zerocopy = { version = "0.7.32", features = ["derive"] }

[lints]
workspace = true