[package]
name = "fstools_formats"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
strict-padding = []

[dependencies]
aes = "0.8"
bytemuck = "1"
byteorder = "1"
dashu = "0.4"
flate2 = "1.0"
fstools_oodle_rt.workspace = true
num-modular = "0.6"
rayon.workspace = true
rsa = "0.9"
thiserror.workspace = true
# Currently fetched from a fork until PR removing 'static bound on WStr
# and implementing Cow support is merged
utf16string = { git = "https://github.com/tremwil/utf16string.git", tag = "0.2.1", "version" = "0.2" }
zerocopy = { version = "0.7.32", features = ["derive"] }
zstd = "0.13"

[lints]
workspace = true