[package]
name = "fstools_oodle_rt"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.3"

[build-dependencies.bindgen]
version = "0.69"
features = ["runtime", "which-rustfmt"]

[lints]
workspace = true
