[package]
name = "fstools_viewer"
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
byteorder = "1"
bevy = { version = "0.13", features = ["dds"] }
bevy_panorbit_camera = "0.14"
bevy-inspector-egui = "0.23"
fstools_formats.workspace = true
fstools_vfs.workspace = true
thiserror.workspace = true
