[package]
name = "fstools_viewer"
edition.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
byteorder = "1"
bevy = { version = "0.13", features = ["dds"] }
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
bevy-inspector-egui = "0.23"
fstools_asset_server.workspace = true
fstools_formats.workspace = true
fstools_dvdbnd.workspace = true
thiserror.workspace = true

# https://github.com/bevyengine/bevy/issues/10425 
blake3 = { version = "1.5", features = ["pure"] }

[lints]
workspace = true
